<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:background="#000000"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/code"
        android:layout_alignLeft="@+id/code"
        android:layout_alignStart="@+id/code"
        android:layout_marginBottom="11dp"
        android:text="@string/password"
        android:textColor="#00ABFA"
        android:textSize="18dp" />

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="numberPassword"
        android:textColor="#00ABFA"
        android:hint="@string/code"
        android:textColorHint="#00ABFA"
        android:background="@drawable/code_theme"
        android:paddingLeft="10dp"
        android:id="@+id/code" />

    <Button
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/code"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/code"
        android:layout_marginBottom="11dp"
        android:background="#00ABFA"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:id="@+id/input"/>

    <ImageView
        android:id="@+id/showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/code"
        android:layout_alignRight="@+id/code"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/showpassword" />

</RelativeLayout>