<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/second_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/compbnr_01"
        app:civ_border_color="#FFFFFF"
        ></de.hdodenhof.circleimageview.CircleImageView>

    <EditText
        android:id="@+id/username"
        android:layout_width="600px"
        android:layout_height="120px"
        android:layout_below="@+id/second_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:textSize="32px"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="25dp"
        android:padding="18dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="600px"
        android:layout_height="120px"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="32px"
        android:hint="@string/password"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="25dp"
        android:padding="18dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="600px"
        android:layout_height="120px"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:textSize="32px"
        android:drawableRight="@drawable/door"
        android:paddingRight="95dp"
        android:drawablePadding="-100dp"/>

</RelativeLayout>